<resources>
    <string name="app_name">RecipeApp</string>
    <string name="recipe_image">Recipe image</string>
    <string name="recipe_name">Recipe name</string>
    <string name="back_button">Back button</string>
    <string name="what_in_the_fridge">What in the fridge?</string>
    <string name="search_button">Search button</string>
    <string name="save_recipe_title">Save recipe</string>
    <string name="pick_recipe_image">Pick recipe image</string>
    <string name="recipe_title">Recipe title</string>
    <string name="recipe_title_edit_hint">Enter recipe title</string>
    <string name="add_step_button">Add step</string>
    <string name="delete_step_button">Delete step</string>
    <string name="save_recipe_button">Save recipe</string>
    <string name="saved_recipes_title">Saved recipes</string>
    <string name="step">Step</string>
    <string name="step_description_hint">Enter step description</string>
    <string name="step_ingredients_hint">Enter ingredients</string>
    <string name="step_equipment_hint">Enter equipment</string>
    <string name="instruction">Instruction</string>
    <string name="step_description">Step description</string>
    <string name="equipment_title">Equipment</string>
    <string name="ingredients_title">Ingredients</string>
    <string name="item_name">Item</string>
    <string name="delete_button">Delete button</string>
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_search">Search</string>
    <string name="bottom_nav_post">Post</string>
    <string name="bottom_nav_saved">Saved</string>
    <string name="empty_home_screen_text">choose\nsome\ningredients</string>
    <string name="empty_search_screen_text">Enter\na search\nquery</string>
</resources>