<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="ru.mtusi_skf.recipeapplication.screens.post.PostFragment"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp" >

        <!-- Заголовок рецепта -->
        <TextView
            android:id="@+id/save_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/save_recipe_title"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Фото рецепта -->
        <TextView
            android:id="@+id/image_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/recipe_image"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            app:layout_constraintStart_toStartOf="@id/save_text"
            app:layout_constraintTop_toBottomOf="@id/save_text" />

        <ImageButton
            android:id="@+id/image_button"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            app:layout_constraintDimensionRatio="3:2"
            app:layout_constraintWidth_percent="0.85"
            app:layout_constraintStart_toStartOf="@id/image_text"
            app:layout_constraintTop_toBottomOf="@id/image_text"
            android:background="@drawable/rectangle"
            android:contentDescription="@string/pick_recipe_image" />

        <ImageView
            android:id="@+id/image_button_icon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="@id/image_button"
            app:layout_constraintTop_toTopOf="@id/image_button"
            app:layout_constraintEnd_toEndOf="@id/image_button"
            app:layout_constraintBottom_toBottomOf="@id/image_button"
            android:background="@drawable/ic_image_button_select"
            android:visibility="visible"
            android:contentDescription="@string/pick_recipe_image" />

        <!-- Название рецепта -->
        <TextView
            android:id="@+id/save_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/recipe_title"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            app:layout_constraintStart_toStartOf="@id/save_text"
            app:layout_constraintTop_toBottomOf="@id/image_button" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/title_text_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/recipe_title_edit_hint"
            app:hintTextColor="@color/Grey_400"
            app:boxBackgroundMode="none"
            app:layout_constraintWidth_percent="0.90"
            app:layout_constraintTop_toBottomOf="@id/save_title_text"
            app:layout_constraintStart_toStartOf="@id/save_title_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/title_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:imeOptions="actionDone"
                android:background="@drawable/rounded_corners"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Шаги рецепта -->

        <LinearLayout
            android:id="@+id/steps_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="@id/title_text_input"
            app:layout_constraintTop_toBottomOf="@id/title_text_input"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Кнопки -->

        <Button
            android:id="@+id/buttonAddStep"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/add_step_button"
            android:textColor="@color/button_text_color"
            android:backgroundTint="@color/Pizazz_500"
            app:layout_constraintTop_toBottomOf="@id/steps_container"
            app:layout_constraintStart_toStartOf="@id/title_text_input"
            app:layout_constraintWidth_percent="0.40" />

        <Button
            android:id="@+id/buttonRemoveStep"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/delete_step_button"
            android:textColor="@color/button_text_color"
            android:backgroundTint="@color/Pizazz_500"
            app:layout_constraintTop_toBottomOf="@id/steps_container"
            app:layout_constraintEnd_toEndOf="@id/title_text_input"
            app:layout_constraintWidth_percent="0.40" />

        <!-- Кнопка для сохранения рецепта -->
        <Button
            android:id="@+id/buttonSaveRecipe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/save_recipe_button"
            android:textColor="@color/button_text_color"
            android:backgroundTint="@color/Pizazz_500"
            app:layout_constraintStart_toStartOf="@id/buttonAddStep"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/buttonRemoveStep"
            app:layout_constraintTop_toBottomOf="@id/buttonAddStep"
            android:layout_marginBottom="80dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

