<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="8dp"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/step_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:textAlignment="center"
                android:padding="8dp"
                android:textAppearance="?attr/textAppearanceHeadline6" />

            <TextView
                android:id="@+id/step_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step_description"
                android:textAlignment="textStart"
                android:padding="8dp"
                android:textAppearance="?attr/textAppearanceHeadline6" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/equipment_title"
                android:textAppearance="?attr/textAppearanceTitleMedium"
                android:padding="8dp"/>

            <TextView
                android:id="@+id/equipment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="pan, pot, etc..."
                android:padding="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ingredients_title"
                android:textAppearance="?attr/textAppearanceTitleMedium"
                android:padding="8dp"/>

            <TextView
                android:id="@+id/ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="apples, cherry, etc..."
                android:padding="8dp"/>

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>